# rpgtextgame

./: .dockerignore  .gitignore  CMakeLists.txt  CODEBASE_DEEP_EXPLANATION.txt  Dockerfile  Laporan_Bab_3.docx  Makefile  README.md  documentation.txt  go.mod  go.sum  main.go  makefile_linux  makefile_windows  ~$extrpg
cmd/app/: main.go
csrc/: input.c  input.h  renderer.c  renderer.h  terminal.c  terminal.h
data/json/: items.json  monsters.json  upgrades.json  weapons.json
internal/application/: battle_service.go  game_state.go  item_service.go  shop_service.go
internal/domain/: element.go  enemy.go  errors.go  inventory.go  player.go  weapon.go
internal/tui/: constants.go  model.go  update.go  view.go
internal/ui/: app.go  c_parity.go  input.go  layout.go  renderer.go  screen.go
project_windows/: Makefile
project_windows/src/: config.h  main.c  types.h
src/: config.cpp  config.h  config.hpp  main.cpp  main.d  types.hpp
src/core/: element.cpp  element.hpp  enemy.cpp  enemy.h  enemy.hpp  inventory.c  inventory.cpp  inventory.h  inventory.hpp  item.cpp  item.hpp  loot.cpp  loot.h  loot.hpp  player.c  player.cpp  player.hpp  weapon.cpp  weapon.hpp
src/data/: items.c  items.cpp  items.d  items.hpp  monsters.cpp  monsters.d  monsters.h  monsters.hpp  registry.c  registry.cpp  registry.hpp  shop_stock.c  shop_stock.cpp  shop_stock.hpp  upgrades.cpp  upgrades.d  upgrades.hpp  weapons.c  weapons.cpp  weapons.d  weapons.hpp
src/db/: data_loader.cpp  data_loader.hpp  json_helpers.cpp  json_helpers.hpp
src/domain/: element.hpp  enemy.cpp  enemy.d  enemy.hpp  errors.hpp  inventory.cpp  inventory.d  inventory.hpp  player.cpp  player.d  player.hpp  weapon.hpp
src/game/: battle.c  battle.cpp  battle.hpp  battle_service.cpp  battle_service.d  battle_service.hpp  item_service.cpp  item_service.d  item_service.hpp  shop.cpp  shop.hpp  shop_service.cpp  shop_service.d  shop_service.hpp  upgrade.cpp  upgrade.hpp
src/tui/: app.cpp  app.d  app.hpp  renderer.cpp  renderer.d  renderer.hpp  screens.cpp  screens.d  screens.hpp  screens2.cpp  screens2.d  screens3.cpp  screens3.d  terminal.cpp  terminal.d  terminal.hpp
src/utils/: utils.c  utils.cpp  utils.hpp
(+38 files in other folders)
